# xtensa-atomic-emulation-trap

./: Cargo.toml  README.md  link.x
src/: lib.rs
test/: wsr.S
