[package]
name = "xtensa-atomic-emulation-trap"
version = "0.1.0"
description = "An atomic emulation trap handler for non atomic Xtensa targets."
keywords = ["Xtensa", "emulation", "atomic"]
authors = ["Scott Mabin <scott@mabez.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/esp-rs/xtensa-atomic-emulation-trap"
edition = "2021"

[dependencies]
xtensa-lx-rt = "0.13.0"

# TODO is this needed?
[features]
esp32   = ["xtensa-lx-rt/esp32"]
esp32s2 = ["xtensa-lx-rt/esp32s2"]
esp32s3 = ["xtensa-lx-rt/esp32s3"]
esp8266 = ["xtensa-lx-rt/esp8266"]
