[package]
name = "xtensa-atomic-emulation-trap"
version = "0.3.1"
description = "An atomic emulation trap handler for non atomic Xtensa targets."
keywords = ["xtensa", "emulation", "atomic"]
authors = ["Scott Mabin <scott@mabez.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/esp-rs/xtensa-atomic-emulation-trap"
edition = "2021"

[package.metadata.docs.rs]
features = "esp32s2"

[dependencies]
xtensa-lx-rt = "0.14.0"

[features]
esp32s2 = ["xtensa-lx-rt/esp32s2"]
esp8266 = ["xtensa-lx-rt/esp8266"]
