[package]
name = "xtensa-atomic-emulation-trap"
version = "0.4.0"
description = "An atomic emulation trap handler for non atomic Xtensa targets."
keywords = ["xtensa", "emulation", "atomic"]
authors = ["Scott Mabin <scott@mabez.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/esp-rs/xtensa-atomic-emulation-trap"
edition = "2021"

[dependencies]